fix: unable to drag the scroll over the hand
With "pointer-events: none;" we are able to drag scrollbar even with the mouse over the hand

--- a/app/core/styles/main.css
+++ b/app/core/styles/main.css
@@ -63,6 +63,7 @@ html {
 }
 
 .hand {
+  pointer-events: none;
   --color-stop: theme("colors.purple.light");
   --page-bg-color: theme("colors.white");
 }
